# Lexer

./: CMakeLists.txt  main.cpp
src/Lexem/: Lexem.cpp  Lexem.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Token/: Token.cpp  Token.h  TokenType.h
src/utils/LexerDialog/: LexerDialog.cpp
test/: comments.txt  file.txt  ids_and_assignments.txt  keywords.txt  test.cpp
test/dirty/: wrong_assignment_float_usage.txt  wrong_assignment_notation_usage.txt  wrong_brackets_usage.txt  wrong_comment_usage.txt  wrong_ids_usage.txt
test/files/: all-output.txt  all.txt
